try to fix broken scaling on mobile

--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@ html, body, wrapper {
 }
 
 wrapper {
-  overflow: hidden;
-}
-
-wrapper {
   display: flex;
 
   flex-flow: row;
@@ -48,6 +44,10 @@ a:active, a:focus {
   background: #000000;
   color: white;
 }
+
+/* ************** *\
+   Deck and Cards
+\* ************** */
 
 #Decks {
   display: none;
@@ -151,6 +151,7 @@ hand > card.inactive:hover {
 \***********/
 
 index {
+  box-sizing: border-box;
   margin-right: 10%;
 
   display: flex;
@@ -321,8 +322,6 @@ guide > item.active:hover {
     flex-direction: column;
     align-content: center;
     align-items: center;
-
-    overflow: hidden;
   }
 
   html {
@@ -340,7 +339,7 @@ guide > item.active:hover {
     top: 0;
 
     background:         linear-gradient( white 90%, #00000000 100% );
-    background:      -o-linear-gradient( white 90%, #00000000 100% ); /* Opera 11.10 */  
+    background:      -o-linear-gradient( white 90%, #00000000 100% ); /* Opera 11.10 */
     background:     -ms-linear-gradient( white 90%, #00000000 100% ); /* IE10 */
     background:    -moz-linear-gradient( white 90%, #00000000 100% ); /* FF 3.6+ */
     background: -webkit-linear-gradient( white 90%, #00000000 100% ); /* Safari 5.1+, Chrome 10+ */
